spacing issues

--- a/assets/section-related-products.css
+++ b/assets/section-related-products.css
@@ -73,7 +73,7 @@
   font-size: 3.5rem;
   left: -3px;
   font-weight: 500;
-  margin: 0px 10px 50px;
+  margin: 0px 10px 20px;
 }
 
 @media (min-width: 500px) {
